<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TimesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="left|right">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/aksaray"
                android:textColor="#f7bf80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/_03_ubat_2022_per_embe"
                android:textColor="#f7bf80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityText" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#ffffff"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calander">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/imsak" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/imsak"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/imsakName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/bes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/asda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#ffffff"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sunrise" />

                    <TextView
                        android:id="@+id/sad"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/gunes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/gunesName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/bes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/asdadasd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#ffffff"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/asda">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sun" />

                    <TextView
                        android:id="@+id/saassdqd"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/ogle"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/ogleName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/bes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#ffffff"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/asdadasd">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sunny" />

                    <TextView
                        android:id="@+id/dqwqsad"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/ikindi"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/ikindiName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/bes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/adasdasdasd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#ffffff"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sunset" />

                    <TextView
                        android:id="@+id/ede"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/aksam"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/aksamName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/bes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sadss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#ffffff"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adasdasdasd">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/night_mode" />

                    <TextView
                        android:id="@+id/asdasdasd1"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/yatsi"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/yatsiName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/bes"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.wear.widget.BoxInsetLayout>